--- a/Examples/SampleAppSwift/SampleAppSwift/Base.lproj/Main.storyboard
+++ b/Examples/SampleAppSwift/SampleAppSwift/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Identify"/>
                                 <connections>
-                                    <action selector="Identify:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nMC-rO-d3E"/>
+                                    <action selector="Identify:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zhI-jH-jAu"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rTO-0k-OH1">
